kubernates/development/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: site-analyser-dev
  labels:
    name: site-analyser-dev
    environment: development
